En correcciones de pantalla de resultados

--- a/tesim/www/index.html
+++ b/tesim/www/index.html
@@ -20,9 +20,12 @@
 
     <!-- your app's js -->
     <script src="lib/underscore/underscore-min.js"></script>
+    <!-- firebase & angularfire libraries -->
+    <!--<script src="lib/firebase/firebase.js"></script>
+    <script src="lib/angular-fire/angularfire.min.js"></script>-->
 
     <script src="js/app.js"></script>
-
+    <script src="js/Underscore.js"></script>
     <script src="js/QuestionsService.js"></script>
     <script src="js/ScoresService.js"></script>
     <script src="js/UserService.js"></script>
