--- a/tesim/www/index.html
+++ b/tesim/www/index.html
@@ -15,17 +15,20 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
+    <script src="lib/underscore/underscore-min.js"></script>
+    <!-- firebase & angularfire libraries -->
+    <!--<script src="lib/firebase/firebase.js"></script>-->
+    <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
+    <script src="lib/angularfire/dist/angularfire.js"></script>
+
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
-    <script src="lib/underscore/underscore-min.js"></script>
-    <!-- firebase & angularfire libraries -->
-    <!--<script src="lib/firebase/firebase.js"></script>
-    <script src="lib/angular-fire/angularfire.min.js"></script>-->
-
     <script src="js/app.js"></script>
     <script src="js/Underscore.js"></script>
+    <script src="js/Filters.js"></script>
     <script src="js/QuestionsService.js"></script>
     <script src="js/ScoresService.js"></script>
     <script src="js/UserService.js"></script>
