--- a/tesim/www/index.html
+++ b/tesim/www/index.html
@@ -17,8 +17,7 @@
 
     <script src="lib/underscore/underscore-min.js"></script>
     <!-- firebase & angularfire libraries -->
-    <!--<script src="lib/firebase/firebase.js"></script>-->
-    <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
+    <script src="lib/firebase/firebase.js"></script>
     <script src="lib/angularfire/dist/angularfire.js"></script>
 
 
@@ -29,6 +28,7 @@
     <script src="js/app.js"></script>
     <script src="js/Underscore.js"></script>
     <script src="js/Filters.js"></script>
+    <script src="js/RepositoryService.js"></script>
     <script src="js/QuestionsService.js"></script>
     <script src="js/ScoresService.js"></script>
     <script src="js/UserService.js"></script>
